<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cajero</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="titulo_banco">BANCO ABC</string>
    <string name="msg_poner_clave">Ingrese su clave :</string>
    <string name="msg_btn_Aceptar">Aceptar</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_menu_cajero">Menu Principal</string>
    <string name="titulo_opciones_menu">Opciones</string>
    <string name="msg_btn_retiro">Retiro</string>
    <string name="msg_btn_transferencia">Transferencia</string>
    <string name="msg_btn_consulta">Consulta</string>
    <string name="msg_btn_salir">Salir</string>
    <string name="title_activity_retiro_cajero">Retiro de Dinero</string>
    <string name="msg_btn_100">S/. 100</string>
    <string name="msg_btn_200">S/. 200</string>
    <string name="msg_btn_500">S/. 500</string>
    <string name="msg_btn_800">S/. 800</string>
    <string name="msg_btn_1500">S/. 1500</string>
    <string name="msg_btn_otro_monto">Otro Monto</string>
    <string name="title_activity_transferencia_cajero">TransferenciaCajero</string>
    <string name="msg_cta_destino">Cuenta de Destino</string>
    <string name="msg_monto_transferencia">Monto</string>
    <string name="msg_btn_Enviar">Enviar</string>
    <string name="title_activity_consulta_cajero">ConsultaCajero</string>
    <string name="msg_ingr_cta">Numero de Cuenta:</string>
    <string name="msg_user">Usuario: </string>
    <string name="msg_ncta">Numero de Cuenta: </string>
    <string name="msg_monto">Saldo Disponible:</string>


</resources>
